# hf-gemma2jpn

./: .env-template  README.md  hf-gemma2jpn.py  pyproject.toml  requirements.txt
